<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity" >
    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always" />
    <item
        android:id="@+id/favorites"
        android:title="@string/favorites"

        android:showAsAction="never"
        />
    <item
        android:id="@+id/dislike"
        android:title="@string/blacklisted_places"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/app_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"
        />
    <item
        android:id="@+id/about_us"
        android:title="@string/about_us"
        android:showAsAction="never"
        />



</menu>
