<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity"
    android:background="@color/background_home">


    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/imageView_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_3" />

    <TextView
        android:layout_below="@+id/imageView_home"
        android:text="@string/text_message"
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>


    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/button_restaurant"
        android:layout_below="@+id/text_message"
        android:text="@string/restaurant"
        android:background="#FF3300"
        android:layout_width="fill_parent"
        android:textSize="25dp"
        android:layout_height="100dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"


        />
    <Button
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button_restaurant"
        android:id="@+id/button_gasstation"
        android:text="@string/gas_station"
        android:background="#FF3300"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button_gasstation"
        android:id="@+id/button_repairs"
        android:text="@string/repair_shop"
        android:background="#FF3300"
        android:layout_width="fill_parent"
        android:fontFamily="sans-serif-medium"
        android:textSize="25dp"
        android:layout_height="100dp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
